fix some minor misspelling & css overflow hidden

--- a/internal_admin/app/styles/app.scss
+++ b/internal_admin/app/styles/app.scss
@@ -2,4 +2,5 @@
   height: 100%;
   width: 100%;
   font-family: 'Roboto', sans-serif;
+  overflow-x: hidden;
 }
